--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -9,3 +9,6 @@ facilitar quando incluir uma nova revisão/versão.
 **Revisão 0** - 10/06/2024
 - Revisão inicial/criação do documento.
   - Autor: Eden Denis F. da S. L. Santos
+
+**Revisão 1** - 31/07/2025
+- Atualização do README para instalação e uso do `catfish`.
