--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,9 +6,13 @@ Incluir a(s) revisão(ões/versão(ões) em ordem da mais atual para a mais anti
 pois trata-se de uma prática para não poluir o arquivo `README.md` e, ao mesmo tempo,
 facilitar quando incluir uma nova revisão/versão.
 
-**Revisão 0** - 10/06/2024
-- Revisão inicial/criação do documento.
-  - Autor: Eden Denis F. da S. L. Santos
+**Revisão 2** - 07/08/2025
+- Atualização do README para instalação e uso do `pinta`.
+- Simplificação do `AGENTS.md`.
 
 **Revisão 1** - 31/07/2025
 - Atualização do README para instalação e uso do `catfish`.
+
+**Revisão 0** - 10/06/2024
+- Revisão inicial/criação do documento.
+  - Autor: Eden Denis F. da S. L. Santos
