--- a/README.ipynb
+++ b/README.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Como instalar o `catfish` no `Linux Ubuntu`"
+    "# Como instalar o `pinta` no `Linux Ubuntu`"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "source": [
     "## Resumo\n",
     "\n",
-    "Este documento apresenta os passos necessários para instalar o utilitário `catfish` no `Linux Ubuntu`."
+    "Este documento apresenta os passos necessários para instalar o utilitário `pinta` no `Linux Ubuntu`."
    ]
   },
   {
@@ -22,7 +22,7 @@
    "source": [
     "## _Abstract_\n",
     "\n",
-    "_This document shows the steps required to install the `catfish` utility on `Linux Ubuntu`._"
+    "_This document shows the steps required to install the `pinta` utility on `Linux Ubuntu`._"
    ]
   },
   {
@@ -35,18 +35,18 @@
    "source": [
     "## Descrição [2]\n",
     "\n",
-    "### `catfish`\n",
+    "### `pinta`\n",
     "\n",
-    "O `catfish` é uma ferramenta de busca para ambientes `Linux`. Ela combina utilitários como `locate` e `find` para localizar arquivos e pastas rapidamente por meio de uma interface simples."
+    "O `pinta` é um editor de imagens simples inspirado no `Paint.NET` e voltado para ambientes `Linux`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Instalar o `catfish` no `Linux Ubuntu`\n",
+    "## 1. Instalar o `pinta` no `Linux Ubuntu`\n",
     "\n",
-    "Para instalar o `catfish`, siga os passos abaixo:\n",
+    "Para instalar o `pinta`, siga os passos abaixo:\n",
     "\n",
     "1. Abra o `Terminal Emulator`. Você pode fazer isso pressionando: `Ctrl + Alt + T`\n",
     "\n",
@@ -92,11 +92,11 @@
     "    sudo apt full-upgrade -y\n",
     "    ```\n",
     "\n",
-    "3. Instale o `catfish` (pacote `poppler-utils`) e verifique a instalação:\n",
+    "3. Instale o `pinta` e verifique a instalação:\n",
     "    ```bash\n",
     "    sudo apt update\n",
-    "    sudo apt install poppler-utils\n",
-    "    catfish -v\n",
+    "    sudo apt install pinta\n",
+    "    pinta --version\n",
     "    ```\n"
    ]
   },
@@ -104,25 +104,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Realizar uma busca simples\n",
+    "## 2. Abrir o `pinta` pelo terminal\n",
     "\n",
-    "Você pode executar o `catfish` informando um diretório para a pesquisa:\n",
+    "Você pode executar o `pinta` diretamente no terminal:\n",
     "```bash\n",
-    "catfish ~/Documentos\n",
+    "pinta\n",
     "```\n",
-    "Esse comando abre a interface do programa iniciando a busca na pasta `Documentos`."
+    "Esse comando abre a interface do programa."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Usar uma variável de terminal para definir o caminho de busca\n",
+    "## 3. Abrir uma imagem usando variável de terminal\n",
     "\n",
-    "Também é possível definir o diretório em uma variável antes de chamar o `catfish`:\n",
+    "Também é possível definir o caminho de uma imagem em uma variável antes de chamar o `pinta`:\n",
     "```bash\n",
-    "search_dir=\"~/Documentos\"\n",
-    "catfish \"$search_dir\"\n",
+    "img_file=\"~/Imagens/exemplo.png\"\n",
+    "pinta \"$img_file\"\n",
     "```"
    ]
   },
@@ -132,7 +132,7 @@
    "source": [
     "## Referências\n",
     "\n",
-    "[1] OPENAI. ***Instalar catfish no Linux Ubuntu***. Disponível em: <https://chatgpt.com/c/6862cf14-11c8-8002-8a1d-96488e72f5cf>. ChatGPT. Acessado em: 11/03/2025 14:23."
+    "[1] OPENAI. ***Instalar pinta no Linux Ubuntu***. Disponível em: <https://chatgpt.com/c/68942e26-b7a0-832f-9c96-7c57044cb43a>. ChatGPT. Acessado em: 07/08/2025 05:14."
    ]
   }
  ],
